# q2pro-rerelease-dll

./: README.md  README.q2rr.md  bg_local.h  g_ai.c  g_ai.cpp  g_chase.c  g_chase.cpp  g_cmds.c  g_cmds.cpp  g_combat.c  g_combat.cpp  g_func.c  g_func.cpp  g_items.c  g_items.cpp  g_l10n.cpp  g_local.h  g_main.c  g_main.cpp  g_misc.c  g_misc.cpp  g_monster.c  g_monster.cpp  g_phys.c  g_phys.cpp  g_save.c  g_save.cpp  g_spawn.c  g_spawn.cpp  g_statusbar.h  g_svcmds.c  g_svcmds.cpp  g_target.c  g_target.cpp  g_trigger.c  g_trigger.cpp  g_turret.c  g_turret.cpp  g_utils.c  g_utils.cpp  (+104 more)
.github/workflows/: build.yml
ctf/: g_ctf.c  g_ctf.cpp  g_ctf.h  p_ctf_menu.c  p_ctf_menu.cpp  p_ctf_menu.h
etc/: default.cfg  q2pro.menu
rogue/: g_rogue_combat.cpp  g_rogue_func.cpp  g_rogue_items.c  g_rogue_items.cpp  g_rogue_misc.c  g_rogue_misc.cpp  g_rogue_monster.cpp  g_rogue_newai.c  g_rogue_newai.cpp  g_rogue_newdm.c  g_rogue_newdm.cpp  g_rogue_newfnc.c  g_rogue_newfnc.cpp  g_rogue_newtarg.c  g_rogue_newtarg.cpp  g_rogue_newtrig.c  g_rogue_newtrig.cpp  g_rogue_newweap.c  g_rogue_newweap.cpp  g_rogue_phys.c  g_rogue_phys.cpp  g_rogue_spawn.c  g_rogue_spawn.cpp  g_rogue_sphere.c  g_rogue_sphere.cpp  g_rogue_utils.c  g_rogue_utils.cpp  m_rogue_carrier.c  m_rogue_carrier.cpp  m_rogue_carrier.h  m_rogue_stalker.c  m_rogue_stalker.cpp  m_rogue_stalker.h  m_rogue_turret.c  m_rogue_turret.cpp  m_rogue_turret.h  m_rogue_widow.c  m_rogue_widow.cpp  m_rogue_widow.h  m_rogue_widow2.c  (+7 more)
src/: g_ai.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_l10n.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_nav.c  g_nav.h  g_phys.c  g_ptrs.h  g_save.c  g_spawn.c  g_statusbar.c  g_statusbar.h  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c  g_weapon.c  game.h  game.rc  m_arachnid.c  m_arachnid.h  m_berserk.c  m_boss2.c  m_boss2.h  m_boss3.c  m_boss32.c  m_brain.c  m_brain.h  m_chick.c  m_chick.h  m_flash.c  m_flipper.c  m_float.c  (+29 more)
src/ctf/: g_ctf.c  g_ctf.h  meson.build  p_ctf_menu.c
src/rogue/: g_rogue_combat.c  g_rogue_func.c  g_rogue_items.c  g_rogue_misc.c  g_rogue_monster.c  g_rogue_newai.c  g_rogue_newdm.c  g_rogue_newfnc.c  g_rogue_newtarg.c  g_rogue_newtrig.c  g_rogue_newweap.c  g_rogue_phys.c  g_rogue_spawn.c  g_rogue_sphere.c  g_rogue_utils.c  m_rogue_carrier.c  m_rogue_stalker.c  m_rogue_turret.c  m_rogue_turret.h  m_rogue_widow.c  m_rogue_widow.h  m_rogue_widow2.c  meson.build  p_rogue_weapon.c  rogue_dm_ball.c  rogue_dm_tag.c
src/xatrix/: g_xatrix_func.c  g_xatrix_items.c  g_xatrix_misc.c  g_xatrix_monster.c  g_xatrix_target.c  g_xatrix_weapon.c  m_xatrix_fixbot.c  m_xatrix_gekk.c  meson.build  p_xatrix_weapon.c
xatrix/: g_xatrix_func.c  g_xatrix_func.cpp  g_xatrix_items.c  g_xatrix_items.cpp  g_xatrix_misc.cpp  g_xatrix_monster.cpp  g_xatrix_target.cpp  g_xatrix_weapon.c  g_xatrix_weapon.cpp  m_xatrix_fixbot.c  m_xatrix_fixbot.cpp  m_xatrix_fixbot.h  m_xatrix_gekk.c  m_xatrix_gekk.cpp  m_xatrix_gekk.h  p_xatrix_weapon.c  p_xatrix_weapon.cpp
