src += files(
  'g_rogue_combat.c',
  'g_rogue_func.c',
  'g_rogue_items.c',
  'g_rogue_misc.c',
  'g_rogue_monster.c',
  'g_rogue_newai.c',
  'g_rogue_newdm.c',
  'g_rogue_newfnc.c',
  'g_rogue_newtarg.c',
  'g_rogue_newtrig.c',
  'g_rogue_newweap.c',
  'g_rogue_phys.c',
  'g_rogue_spawn.c',
  'g_rogue_sphere.c',
  'g_rogue_utils.c',
  'm_rogue_carrier.c',
  'm_rogue_stalker.c',
  'm_rogue_turret.c',
  'm_rogue_widow2.c',
  'm_rogue_widow.c',
  'p_rogue_weapon.c',
  'rogue_dm_ball.c',
  'rogue_dm_tag.c',
)
